# licitaciones-espana

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRODUCTION_READY.md  README.md  docker-compose.yml  licitaciones_completo_2012_2026.parquet  licitaciones_espana.parquet  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.llm/: archon-tasks-etl-cli-first-iteration.md  status-and-etl-next-steps.md
Euskadi/: ccaa_euskadi.py  consolidacion_euskadi.py
catalunya/: README.md
ccaa_Andalucia/: licitaciones_andalucia.parquet
comunidad_madrid/: .gitignore  ccaa_madrid_ayuntamiento.py  contratacion_comunidad_madrid_completo.csv  contratacion_comunidad_madrid_completo.parquet  csv_to_parquet_comunidad.py  descarga_contratacion_comunidad_madrid_v1.py
docs/: api-reference.md  extraction-contract.md  how-to-use-deployment.md  operational-notes.md  quick-guide-deploy.md
etl/: __init__.py  __main__.py  api.py  cli.py  cnae_ingest.py  config.py  dir3_ingest.py  docker_incident_context.py  embed_cpv.py  ingest_l0.py  log_supervisor.py  scheduler.py  schema_check.py
galicia/: contratos_galicia.parquet  scraper_galicia.py
nacional/: licitaciones.py  subvenciones.py
schemas/: 001_dim_cpv.sql  001b_dim_cpv_router.sql  002_dim_ccaa.sql  002_nacional.sql  002b_dim_provincia.sql  003_catalunya.sql  003_dim_dir3.sql  004_nuts_spain.sql  005_views.sql  006_valencia.sql  007_views.sql  008_scheduler.sql  009_scheduler_runs_pid.sql  012_nacional_subvenciones.sql  012_subvenciones_minimo.sql  013_dim_cnae.sql  014_dim_ccaa_organos.sql  014_dim_organos_gestores_ccaa.sql  015_dim_ministerios_organos.sql  016_dim_provincias_organos.sql  017_dim_otros_organos.sql  018_dim_beneficiarios_subvenciones.sql  019_dim_instrumentos_subvenciones.sql  020_dim_politica_gastos.sql  021_scheduler_incidents.sql  022_llm_resumen_logs.sql  022_nacional_procedimiento_code_integer.sql  024_dim_codigos_ine.sql  024_dim_municipios.sql  025_dim_estado_licitacion.sql  026_lotes_licitaciones.sql  030_l0_subvenciones_nlp.sql  032_ops_llm_bases_reguladoras_logs.sql  033_scheduler_batches.sql  034_ops_llm_pricing.sql  035_ops_nlp_runs.sql  036_ops_nlp_runs_cancel_requested.sql  037_texto_beneficiario_fino_text.sql  038_domicilio_fiscal_tipo_varchar40.sql  README.md
scripts/: ccaa_andalucia.py  (+14 more)
(+1132 files in other folders)
