[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "licitaciones-etl"
version = "2.0.6"
description = "ETL microservice CLI for licitaciones-espana (schemas, init-db, ingest, scheduler)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[project.scripts]
licitia-etl = "etl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*"]
